[gd_scene load_steps=2 format=3 uid="uid://dphe0i65buw82"]

[ext_resource type="Script" path="res://gameplay/other/spell.gd" id="1_yed8b"]

[node name="Spell" type="Node"]
script = ExtResource("1_yed8b")

[node name="CDProgress" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="GCDProgress" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CastProgress" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="CDProgress" to="." method="_on_cd_progress_timeout"]
[connection signal="timeout" from="GCDProgress" to="." method="_on_gcd_progress_timeout"]
[connection signal="timeout" from="CastProgress" to="." method="_on_cast_progress_timeout"]
